# Compilerm

./: .gitignore  README.md  mushroom.docx  pyproject.toml  requirements.txt
.github/workflows/: Lint Code Base.yml
Metrics/: sonar-project.properties
analysis/: Investor Pitch.docx
data/: new.ipynb  random.ipynb  raw data 2.csv  raw data.csv  test.csv
src/: Hypothesis_test.py  Thompson.py  UCB.py  __main__.py  data simulation.py  data_visualization.py  epsilon_greedy_mab.py  main.py  test_unittest.py
src/test/: test_unittest.py  unittest example.py
