[tool.poetry]
name = "srh-berlin-software-engineering"
version = "0.1.0"
description = ""
authors = ["Chen-Yu Liu <shin7965977@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.3"
pandas = "^2.1.4"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"
